--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*. .NET linguist-detectable=true
+*.C# linguist-detectable=true
 *.js linguist-detectable=false
 *.html linguist-detectable=false
-*.xml linguist-detectable=false
+*.css linguist-detectable=false
