--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,2 @@
 *.C# linguist-detectable=true
-*.js linguist-detectable=false
-*.html linguist-detectable=false
-*.css linguist-detectable=false
+*.* linguist-detectable=false
